--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,9 @@
 .env.local
 .env.development.local
 .env.test.local
-.env.production.
-./.env
+.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.env
